--- a/counter.html
+++ b/counter.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>文字数カウント & 保存ツール</title>
+<title>【リアルタイム】文字数カウント・行数計測ツール | ファイル保存機能付き</title>
+<meta name="description" content="リアルタイムで文字数と行数を即座に計測する無料の文字数カウントツール。Twitter/SNS向けに文字数制限も設定可能。TXT, Markdown, CSV形式でのファイル保存に対応。">
 
 <link rel="stylesheet" href="style.css">
 
@@ -258,4 +259,4 @@ function download(){
 </script>
 
 </body>
-              </html>
+</html>
