--- a/settings.html
+++ b/settings.html
@@ -33,7 +33,7 @@ max-width:500px;margin:30px auto;padding:20px}
     background: var(--bg);
     color: var(--text);
     cursor: pointer;
-    margin-bottom: 5px;
+    margin-bottom: 5px; 
 }
 .setting-group button:hover {
     background: var(--accent-soft);
@@ -175,7 +175,7 @@ function setRandomTheme() {
     setTheme(randomKey, randomName);
 }
 
-// --- その他設定ロジック（変更なし） ---
+// --- その他設定ロジック ---
 
 function updateViewModeDisplay(view) {
     currentViewModeElement.textContent = (view === 'sp' ? 'スマホ' : 'PC');
