--- a/counter.html
+++ b/counter.html
@@ -11,8 +11,8 @@
 </head>
 
 <body data-theme="light_green"> <script>
-// 制限アクセス数 (index.htmlと一致させる)
-const ACCESS_LIMIT = 10000;
+// 制限アクセス数 (2アクセスで制限)
+const ACCESS_LIMIT = 2;
 const ACCESS_GAS_URL = "https://script.google.com/macros/s/AKfycbwALCjWmxSF-IzTP3bBp_wdlo-5k_Wuag1dH0D3cuUg5pYqLf6E2cf2L1NcIY476DqyHw/exec"; 
 
 
