--- a/about.html
+++ b/about.html
@@ -3,75 +3,102 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>制作者紹介</title>
-
+<title>制作者紹介 | 文字数カウントツール</title>
 <link rel="stylesheet" href="style.css">
-
 <style>
-/* about.html専用のレイアウト */
-body{
-    max-width: 720px;
-    margin: 30px auto;
-    padding: 20px;
+/* about.html専用のスタイル */
+body{max-width:720px;margin:30px auto;padding:20px;}
+section{
+  background:var(--card);
+  border-radius:14px;
+  padding:20px;
+  margin-bottom:30px;
+  border:1px solid var(--border);
 }
-.profile-card {
-    background: var(--card);
-    border-radius: 14px;
-    padding: 20px;
-    margin-bottom: 20px;
+section h2{
+  color: var(--accent);
+  border-bottom: 2px solid var(--accent-soft);
+  padding-bottom: 5px;
+  margin-top: 0;
+}
+.update-item {
     border: 1px solid var(--border);
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 20px;
+    background: var(--card-light);
 }
-.profile-card h2 {
+.update-item h3 {
     color: var(--accent);
-    border-bottom: 2px solid var(--accent-soft);
-    padding-bottom: 5px;
     margin-top: 0;
+    margin-bottom: 10px;
+    border-bottom: 1px dotted var(--border);
+    padding-bottom: 5px;
+    font-size: 1.2em;
 }
-.back-link a {
-    color: var(--link);
-    text-decoration: none;
-    font-weight: bold;
+.update-item ul {
+    list-style-type: disc;
+    padding-left: 20px;
+    font-size: 0.95em;
 }
 </style>
 </head>
-<body data-theme="light_green"> <h1>制作者紹介</h1>
+<body data-theme="light_green">
+<h1>制作者紹介・アップデート履歴</h1>
 
-<div class="profile-card">
-    <h2>制作者情報</h2>
-    <p><strong>制作者名:</strong> 篠ノ井乗務区 (Shino Rail)</p>
-    <p><strong>関連リンク:</strong></p>
-    <ul>
-        <li><a href="https://x.com/shinorail_lab">X (旧Twitter) - @shinorail_lab</a></li>
-        <li><a href="https://x.com/Shino_Rail">X (旧Twitter) - @Shino_Rail</a></li>
-        <li><a href="https://28475-train.github.io/snr-rail/index.html">公式サイト (順次公開中)</a></li>
-    </ul>
-    <p><strong>制作日:</strong> 2025年12月 (最新版)</p>
-</div>
+<section>
+    <h2>制作者について</h2>
+    <p>このツールは、**篠ノ井乗務区**が、日々の業務や文章作成の際に文字数やバイト数を手軽に確認したいという思いから、開発・公開したものです。</p>
+    <p>不具合の報告や機能改善の提案がありましたら、ぜひご連絡ください。（連絡先情報やSNSリンクなどを記載）</p>
+</section>
 
-<div class="profile-card">
-    <h2>ツール制作の目的</h2>
-    <p>本ツールは、文字数をリアルタイムで確認し、手軽にファイルを保存することを目的として開発されました。</p>
-    <p>シンプルで使いやすいインターフェースを意識し、利用者が日常のテキスト作業をスムーズに行えるよう設計しています。</p>
-</div>
-
-<div class="profile-card">
-    <h2>利用技術</h2>
-    <ul>
-        <li>HTML5 / CSS3 (レスポンシブデザイン、テーマ切替)</li>
-        <li>JavaScript (カウントロジック、データ保存、設定機能、ランダムテーマ)</li>
-        <li>Google Apps Script (GAS) (アクセスカウンター、お知らせ配信)</li>
-    </ul>
-</div>
-
-<p class="back-link"><a href="counter.html">ツール画面に戻る</a></p>
+<section>
+    <h2>アップデート履歴 (リリースノート)</h2>
+    <div id="releaseNotes">リリースノートを読み込み中...</div>
+</section>
 
 <script>
-// テーマ設定の適用
+// テーマ設定の適用 (ローカルストレージから読み込み)
 const savedTheme = localStorage.getItem('theme');
 if (savedTheme) {
     document.body.setAttribute('data-theme', savedTheme);
 }
-</script>
 
+// === リリースノートの外部読み込み ===
+// ★ リリースノート用GAS URLを設定
+const RELEASE_NOTES_GAS_URL = "https://script.google.com/macros/s/AKfycbzHWLSZ5PsrQs2SyFY9hVclq7UI8on6R67d8IkxDMS_XZB_d9PWTis_8xiMIYG5NHlENQ/exec"; 
+
+fetch(RELEASE_NOTES_GAS_URL)
+  .then(r => {
+    if (!r.ok) {
+        throw new Error('リリースノートデータの取得に失敗しました。');
+    }
+    return r.json();
+  })
+  .then(list => {
+    const container = document.getElementById('releaseNotes');
+    if (!list || list.length === 0) {
+      container.textContent = '現在、アップデート履歴はありません。';
+      return;
+    }
+    
+    container.innerHTML = '';
+    list.forEach(item => {
+      // notesが配列であることを想定
+      const ulItems = item.notes.map(note => `<li>${note}</li>`).join('');
+      const d = document.createElement('div');
+      d.className = 'update-item';
+      d.innerHTML = `
+        <h3>Version ${item.version} (${item.date})</h3>
+        <ul>${ulItems}</ul>
+      `;
+      container.appendChild(d);
+    });
+  })
+  .catch(error => {
+    console.error('リリースノート取得エラー:', error);
+    document.getElementById('releaseNotes').textContent = 'アップデート履歴の読み込みに失敗しました。';
+  });
+</script>
 </body>
 </html>
